Market API 연결 및 컴포넌트 수정, Search 컴포넌트 동작 수정, chart window 에러 수

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,21 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* 스크롤바 넓이 지정 */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 10px;
+}
+
+/* 스크롤바 트랙 꾸미기 */
+::-webkit-scrollbar-track {
+  /* background: #888; */
+  border-radius: 5px;
+}
+
+/* 스크롤바 손잡이 꾸미기 */
+::-webkit-scrollbar-thumb {
+  background: #5e6673;
+  border-radius: 5px;
+}
