--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "BinancePlex";
+  src: url("https://db.onlinewebfonts.com/t/d05c19ccecf7003d248c60ffd6b5e8f7.eot");
+  src: url("https://db.onlinewebfonts.com/t/d05c19ccecf7003d248c60ffd6b5e8f7.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/d05c19ccecf7003d248c60ffd6b5e8f7.woff2")
+      format("woff2"),
+    url("https://db.onlinewebfonts.com/t/d05c19ccecf7003d248c60ffd6b5e8f7.woff")
+      format("woff"),
+    url("https://db.onlinewebfonts.com/t/d05c19ccecf7003d248c60ffd6b5e8f7.ttf")
+      format("truetype"),
+    url("https://db.onlinewebfonts.com/t/d05c19ccecf7003d248c60ffd6b5e8f7.svg#Binance PLEX")
+      format("svg");
+}
+
 :root {
   --background: #ffffff;
   --foreground: #0b0e11;
@@ -22,7 +37,16 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: BinancePlex, Arial, sans-serif !important;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  background-color: #181a20 !important;
+  border: 1px solid #ffffff;
+  transform: rotate(45deg);
 }
 
 /* 스크롤바 넓이 지정 */
@@ -41,4 +65,13 @@ body {
 ::-webkit-scrollbar-thumb {
   background: #5e6673;
   border-radius: 5px;
+}
+
+@keyframes ticker {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
 }
